coupon-api-deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-mysql
  labels:
    app: coupon-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon-mysql
  template:
    metadata:
      labels:
        app: coupon-mysql
    spec:
      containers:
      - name: mysql
        image: ubuntu/mysql:edge
        command: ["mysqld", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci", "--explicit_defaults_for_timestamp=1"]
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-init
          mountPath: /docker-entrypoint-initdb.d
      restartPolicy: Always
      volumes:
      - name: mysql-init
        hostPath:
          path: localhost
