coupon-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-api
  labels:
    app: coupon-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon-api
  template:
    metadata:
      labels:
        app: coupon-api
    spec:
      containers:
      - name: coupon-api
        image: cloudbreak6th/coupon-api:multi_v0.1
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
      restartPolicy: Always
