coupon-api-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: coupon-mysql
spec:
  selector:
    app: coupon-mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
