coupon-api-service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: coupon-redis
spec:
  selector:
    app: coupon-redis
  ports:
  - protocol: TCP
    port: 6380
    targetPort: 6380
  type: ClusterIP
